--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="/src/assets/css/slick.css">
     <link rel="stylesheet" href="/src/assets/css/nice-select.css">
     <link rel="stylesheet" href="/src/assets/css/style.css">
-    <title>Vite + Vue + TS</title>
+    <title>SPA Booking</title>
 </head>
 
 <body overflow: visible;>
